--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "chrome-aws-lambda": "^10.1.0",
-    "puppeteer": "^10.2.0",
+    "lighthouse": "^8.3.0",
     "puppeteer-core": "^10.2.0"
   }
 }
