--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "node": "14.x"
   },
   "dependencies": {
-    "chrome-aws-lambda": "^5.2.1",
+    "chrome-aws-lambda": "^7.0.0",
     "lighthouse": "^8.3.0",
-    "puppeteer-core": "^5.2.1"
+    "puppeteer": "^7.1.0",
+    "puppeteer-core": "^7.1.0"
   }
 }
